--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2024"
 chrono = "0.4.42"
 csv = "1.4.0"
 hdrhistogram = "7.5.4"
+num_cpus = "1.17.0"
 rand = "0.9.2"
 smol = "2.0.2"
+socket2 = { version = "0.6.1", features = ["all"] }
