--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ csv = "1.4.0"
 easy-parallel = "3.3.1"
 futures-lite = "2.6.1"
 hdrhistogram = "7.5.4"
+nix = {version = "0.30.1", features = ["event"] }
 num_cpus = "1.17.0"
 rand = "0.9.2"
+rand_distr = "0.5.1"
 smol = "2.0.2"
-socket2 = { version = "0.6.1", features = ["all"] }
 thiserror = "2.0.17"
